--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,9 @@
 {
   "files.exclude": {
-    "package-lock.json": true,
     ".babelrc": true,
-    "node_modules": true,
     ".prettierignore.yml": true,
     ".gitignore": true,
-    "prettierrc.yml": true
+    "prettierrc.yml": true,
+    "package-lock.json": true
   }
 }
