--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "gulp"
   },
   "browserslist": [
     "last 1 version",
@@ -14,18 +15,19 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.14.5",
-    "@babel/preset-env": "^7.14.5",
+    "@babel/core": "^7.14.8",
+    "@babel/preset-env": "^7.14.8",
     "@babel/register": "^7.14.5",
-    "autoprefixer": "^10.2.6",
-    "browser-sync": "^2.26.14",
+    "autoprefixer": "^10.3.1",
+    "browser-sync": "^2.27.4",
+    "browsersync-ssi": "^0.2.4",
     "cssnano": "^5.0.6",
     "del": "^6.0.0",
     "fs": "^0.0.1-security",
-    "gh-pages": "^3.2.0",
+    "gh-pages": "^3.2.3",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
-    "gulp-changed": "^4.0.2",
+    "gulp-changed": "^4.0.3",
     "gulp-concat": "^2.6.1",
     "gulp-dart-sass": "^1.0.2",
     "gulp-debug": "^4.0.0",
@@ -35,11 +37,17 @@
     "gulp-newer": "^1.4.0",
     "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^9.0.0",
+    "gulp-remember": "^1.0.1",
     "gulp-rename": "^2.0.0",
+    "gulp-strip-comments": "^2.5.2",
     "gulp-terser": "^2.0.1",
     "path": "^0.12.7",
-    "prettier": "2.3.1",
+    "prettier": "2.3.2",
     "webpcss": "^1.3.4"
   },
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "normalize.css": "^8.0.1",
+    "sass-rem": "^3.0.0"
+  }
 }
