--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,8 +5,6 @@
     ".gitignore": true,
     "prettierrc.yml": true,
     "package-lock.json": true,
-    "node_modules": true,
-    ".vscode": true,
-    "dist": true
+    ".vscode": true
   }
 }
