--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "devDependencies": {
     "@babel/core": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
-    "@babel/register": "^7.14.5",
+    "@babel/register": "^7.15.3",
     "autoprefixer": "^10.3.1",
     "browser-sync": "^2.27.5",
     "cssnano": "^5.0.7",
@@ -47,6 +47,7 @@
   "description": "",
   "dependencies": {
     "normalize.css": "^8.0.1",
+    "postcss": "^8.3.6",
     "sass-rem": "^3.0.0"
   }
 }
