--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,6 @@
     ".gitignore": true,
     "prettierrc.yml": true,
     "package-lock.json": true,
-    ".vscode": true
+    ".vscode": false
   }
 }
